--- a/joshua.html
+++ b/joshua.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />                                       
     <title>Index</title>
+    <!-- External CSS --> 
+    <link rel="stylesheet" href="style.css"  />
+   
     <!--     internal css -->
-    <style type="text/css">
+   <style type="text/css">
       body {
         font-size: 1em;
       }
@@ -29,37 +32,51 @@
         background-position: center;
         color: #fff !important; /* white */
       }
+       }
       div h2 {
-        font-size: 2rem;
+        font-size: 2em;
       }
       div h3 {
         color: yellow;
       }
     </style>
   </head>
-  < !--   CSS Comment
+  <body style="background-color: rgb(142, 106, 163);">
+    <!--   CSS Comment
   /*
     background-color: rgb(142, 106, 163);
   */ 
-        */ 
 -->
-  <body style="background-color: rgb(142, 106, 163);">
+    <object type="text/html" data="nav.html"></object>
     <!--   Inline CSS -->
     <h1
       style="color: #444; text-align:center; border: 10px dotted pink; font-family: Verdana;"
     >
       Hello World!
     </h1>
-    <h1
+    <h1 class="fontcolor" 
       style="text-align:right; border-left: 3px solid blue; background-color: rgba(240, 12, 168, 0.5);"
     >
       Welcome
     </h1>
-    <div style="color: red;">
+    <div class="nobg fontcolor" style="color: red;">
       <h2>
         Redcross Rescue Fund
       </h2>
       <h3>
-        Help us provide food.
+        Welcome to Our Page
       </h3>
     </div>
+
+    <div class="nobg" style="color: red;">
+      <h2>
+        Heading 2
+      </h2>
+      <h3>
+        Heading 3
+      </h3>
+    </div>
+    <object type="text/html" data="footer.html"></object>
+  </body>
+</html>
+
