🎱🏁 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         Welcome to Our Page
       </h3>
     <img src= "https://cdn.glitch.com/9b27244b-aae7-43b3-8916-979bbaf22259%2Fimages.png?v=1596043176017" width="100">
+      <a href="/about/index.html">About Me</a>
     </div>
     
 
