--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     >
       Welcome
     </h1>
-    <div class="nobg fontcolor" style="color: red;">
+    <div class="nobg fontcolor" style="color: black;">
       <h2 style="color:#444">
         Redcross Rescue Fund
         
